# RSI

./: README.md
backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
